spl.output
Terminals unused in grammar

   NUMBER


State 65 conflicts: 1 shift/reduce
State 70 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 103 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: IDENTIFIER COLON block ENDPROGRAM IDENTIFIER DOT

    2 block: DECLARATIONS declaration_block CODE statement_list
    3      | CODE statement_list

    4 declaration_block: IDENTIFIERs OF TYPE type SEMICOLON
    5                  | declaration_block IDENTIFIERs OF TYPE type SEMICOLON

    6 IDENTIFIERs: IDENTIFIER
    7            | IDENTIFIERs COMMA IDENTIFIERs

    8 real: INTEGER DOT INTEGER
    9     | MINUS INTEGER DOT INTEGER

   10 statement_list: statement
   11               | statement_list SEMICOLON statement

   12 statement: assignment_statement
   13          | if_statement
   14          | do_statement
   15          | while_statement
   16          | for_statement
   17          | write_statement
   18          | read_statement

   19 assignment_statement: expression POINTER IDENTIFIER

   20 if_statement: IF conditional THEN statement_list ENDIF
   21             | IF conditional THEN statement_list ELSE statement_list ENDIF

   22 do_statement: DO statement_list WHILE conditional ENDDO

   23 for_statement: FOR IDENTIFIER IS expression BY expression TO expression DO statement_list ENDFOR

   24 while_statement: WHILE conditional DO statement_list ENDWHILE

   25 write_statement: WRITE BRA output_list KET
   26                | NEWLINE

   27 output_list: value
   28            | output_list COMMA value

   29 read_statement: READ BRA IDENTIFIER KET

   30 conditional: expression comparator expression
   31            | NOT conditional
   32            | conditional AND conditional
   33            | conditional OR conditional

   34 comparator: EQUALS
   35           | SHEVRONS
   36           | LESSTHAN
   37           | MORETHAN
   38           | LESSOREQUAL
   39           | MOREOREQUAL

   40 expression: term
   41           | term PLUS expression
   42           | term MINUS expression

   43 term: value
   44     | value TIMES term
   45     | value DIVIDE term

   46 value: IDENTIFIER
   47      | constant
   48      | BRA expression KET

   49 constant: number_constant
   50         | character_constant

   51 character_constant: APOSTROPHE CHARACTER APOSTROPHE

   52 number_constant: INTEGER
   53                | MINUS INTEGER
   54                | real

   55 type: CHARACTERTYPE
   56     | INTEGER
   57     | REAL


Terminals, with rules where they appear

$end (0) 0
error (256)
COLON (258) 1
DOT (259) 1 8 9
LESSTHAN (260) 36
MORETHAN (261) 37
PLUS (262) 41
MINUS (263) 9 42 53
SEMICOLON (264) 4 5 11
COMMA (265) 7 28
POINTER (266) 19
BRA (267) 25 29 48
KET (268) 25 29 48
LESSOREQUAL (269) 38
MOREOREQUAL (270) 39
SHEVRONS (271) 35
APOSTROPHE (272) 51
TIMES (273) 44
DIVIDE (274) 45
EQUALS (275) 34
ENDPROGRAM (276) 1
DECLARATIONS (277) 2
CODE (278) 2 3
OF (279) 4 5
TYPE (280) 4 5
IF (281) 20 21
THEN (282) 20 21
ENDIF (283) 20 21
ELSE (284) 21
DO (285) 22 23 24
WHILE (286) 22 24
ENDDO (287) 22
FOR (288) 23
IS (289) 23
BY (290) 23
TO (291) 23
ENDFOR (292) 23
ENDWHILE (293) 24
WRITE (294) 25
NEWLINE (295) 26
READ (296) 29
NOT (297) 31
AND (298) 32
OR (299) 33
REAL (300) 57
CHARACTER (301) 51
CHARACTERTYPE (302) 55
INTEGER (303) 8 9 52 53 56
NUMBER (304)
IDENTIFIER (305) 1 6 19 23 29 46


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
block (53)
    on left: 2 3, on right: 1
declaration_block (54)
    on left: 4 5, on right: 2 5
IDENTIFIERs (55)
    on left: 6 7, on right: 4 5 7
real (56)
    on left: 8 9, on right: 54
statement_list (57)
    on left: 10 11, on right: 2 3 11 20 21 22 23 24
statement (58)
    on left: 12 13 14 15 16 17 18, on right: 10 11
assignment_statement (59)
    on left: 19, on right: 12
if_statement (60)
    on left: 20 21, on right: 13
do_statement (61)
    on left: 22, on right: 14
for_statement (62)
    on left: 23, on right: 16
while_statement (63)
    on left: 24, on right: 15
write_statement (64)
    on left: 25 26, on right: 17
output_list (65)
    on left: 27 28, on right: 25 28
read_statement (66)
    on left: 29, on right: 18
conditional (67)
    on left: 30 31 32 33, on right: 20 21 22 24 31 32 33
comparator (68)
    on left: 34 35 36 37 38 39, on right: 30
expression (69)
    on left: 40 41 42, on right: 19 23 30 41 42 48
term (70)
    on left: 43 44 45, on right: 40 41 42 44 45
value (71)
    on left: 46 47 48, on right: 27 28 43 44 45
constant (72)
    on left: 49 50, on right: 47
character_constant (73)
    on left: 51, on right: 50
number_constant (74)
    on left: 52 53 54, on right: 49
type (75)
    on left: 55 56 57, on right: 4 5


state 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1

    program  go to state 2


state 1

    1 program: IDENTIFIER . COLON block ENDPROGRAM IDENTIFIER DOT

    COLON  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: IDENTIFIER COLON . block ENDPROGRAM IDENTIFIER DOT

    DECLARATIONS  shift, and go to state 5
    CODE          shift, and go to state 6

    block  go to state 7


state 4

    0 $accept: program $end .

    $default  accept


state 5

    2 block: DECLARATIONS . declaration_block CODE statement_list

    IDENTIFIER  shift, and go to state 8

    declaration_block  go to state 9
    IDENTIFIERs        go to state 10


state 6

    3 block: CODE . statement_list

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    IF          shift, and go to state 14
    DO          shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    WRITE       shift, and go to state 18
    NEWLINE     shift, and go to state 19
    READ        shift, and go to state 20
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                  go to state 23
    statement_list        go to state 24
    statement             go to state 25
    assignment_statement  go to state 26
    if_statement          go to state 27
    do_statement          go to state 28
    for_statement         go to state 29
    while_statement       go to state 30
    write_statement       go to state 31
    read_statement        go to state 32
    expression            go to state 33
    term                  go to state 34
    value                 go to state 35
    constant              go to state 36
    character_constant    go to state 37
    number_constant       go to state 38


state 7

    1 program: IDENTIFIER COLON block . ENDPROGRAM IDENTIFIER DOT

    ENDPROGRAM  shift, and go to state 39


state 8

    6 IDENTIFIERs: IDENTIFIER .

    $default  reduce using rule 6 (IDENTIFIERs)


state 9

    2 block: DECLARATIONS declaration_block . CODE statement_list
    5 declaration_block: declaration_block . IDENTIFIERs OF TYPE type SEMICOLON

    CODE        shift, and go to state 40
    IDENTIFIER  shift, and go to state 8

    IDENTIFIERs  go to state 41


state 10

    4 declaration_block: IDENTIFIERs . OF TYPE type SEMICOLON
    7 IDENTIFIERs: IDENTIFIERs . COMMA IDENTIFIERs

    COMMA  shift, and go to state 42
    OF     shift, and go to state 43


state 11

    9 real: MINUS . INTEGER DOT INTEGER
   53 number_constant: MINUS . INTEGER

    INTEGER  shift, and go to state 44


state 12

   48 value: BRA . expression KET

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    expression          go to state 45
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 13

   51 character_constant: APOSTROPHE . CHARACTER APOSTROPHE

    CHARACTER  shift, and go to state 46


state 14

   20 if_statement: IF . conditional THEN statement_list ENDIF
   21             | IF . conditional THEN statement_list ELSE statement_list ENDIF

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    NOT         shift, and go to state 47
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    conditional         go to state 48
    expression          go to state 49
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 15

   22 do_statement: DO . statement_list WHILE conditional ENDDO

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    IF          shift, and go to state 14
    DO          shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    WRITE       shift, and go to state 18
    NEWLINE     shift, and go to state 19
    READ        shift, and go to state 20
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                  go to state 23
    statement_list        go to state 50
    statement             go to state 25
    assignment_statement  go to state 26
    if_statement          go to state 27
    do_statement          go to state 28
    for_statement         go to state 29
    while_statement       go to state 30
    write_statement       go to state 31
    read_statement        go to state 32
    expression            go to state 33
    term                  go to state 34
    value                 go to state 35
    constant              go to state 36
    character_constant    go to state 37
    number_constant       go to state 38


state 16

   24 while_statement: WHILE . conditional DO statement_list ENDWHILE

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    NOT         shift, and go to state 47
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    conditional         go to state 51
    expression          go to state 49
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 17

   23 for_statement: FOR . IDENTIFIER IS expression BY expression TO expression DO statement_list ENDFOR

    IDENTIFIER  shift, and go to state 52


state 18

   25 write_statement: WRITE . BRA output_list KET

    BRA  shift, and go to state 53


state 19

   26 write_statement: NEWLINE .

    $default  reduce using rule 26 (write_statement)


state 20

   29 read_statement: READ . BRA IDENTIFIER KET

    BRA  shift, and go to state 54


state 21

    8 real: INTEGER . DOT INTEGER
   52 number_constant: INTEGER .

    DOT  shift, and go to state 55

    $default  reduce using rule 52 (number_constant)


state 22

   46 value: IDENTIFIER .

    $default  reduce using rule 46 (value)


state 23

   54 number_constant: real .

    $default  reduce using rule 54 (number_constant)


state 24

    3 block: CODE statement_list .
   11 statement_list: statement_list . SEMICOLON statement

    SEMICOLON  shift, and go to state 56

    $default  reduce using rule 3 (block)


state 25

   10 statement_list: statement .

    $default  reduce using rule 10 (statement_list)


state 26

   12 statement: assignment_statement .

    $default  reduce using rule 12 (statement)


state 27

   13 statement: if_statement .

    $default  reduce using rule 13 (statement)


state 28

   14 statement: do_statement .

    $default  reduce using rule 14 (statement)


state 29

   16 statement: for_statement .

    $default  reduce using rule 16 (statement)


state 30

   15 statement: while_statement .

    $default  reduce using rule 15 (statement)


state 31

   17 statement: write_statement .

    $default  reduce using rule 17 (statement)


state 32

   18 statement: read_statement .

    $default  reduce using rule 18 (statement)


state 33

   19 assignment_statement: expression . POINTER IDENTIFIER

    POINTER  shift, and go to state 57


state 34

   40 expression: term .
   41           | term . PLUS expression
   42           | term . MINUS expression

    PLUS   shift, and go to state 58
    MINUS  shift, and go to state 59

    $default  reduce using rule 40 (expression)


state 35

   43 term: value .
   44     | value . TIMES term
   45     | value . DIVIDE term

    TIMES   shift, and go to state 60
    DIVIDE  shift, and go to state 61

    $default  reduce using rule 43 (term)


state 36

   47 value: constant .

    $default  reduce using rule 47 (value)


state 37

   50 constant: character_constant .

    $default  reduce using rule 50 (constant)


state 38

   49 constant: number_constant .

    $default  reduce using rule 49 (constant)


state 39

    1 program: IDENTIFIER COLON block ENDPROGRAM . IDENTIFIER DOT

    IDENTIFIER  shift, and go to state 62


state 40

    2 block: DECLARATIONS declaration_block CODE . statement_list

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    IF          shift, and go to state 14
    DO          shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    WRITE       shift, and go to state 18
    NEWLINE     shift, and go to state 19
    READ        shift, and go to state 20
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                  go to state 23
    statement_list        go to state 63
    statement             go to state 25
    assignment_statement  go to state 26
    if_statement          go to state 27
    do_statement          go to state 28
    for_statement         go to state 29
    while_statement       go to state 30
    write_statement       go to state 31
    read_statement        go to state 32
    expression            go to state 33
    term                  go to state 34
    value                 go to state 35
    constant              go to state 36
    character_constant    go to state 37
    number_constant       go to state 38


state 41

    5 declaration_block: declaration_block IDENTIFIERs . OF TYPE type SEMICOLON
    7 IDENTIFIERs: IDENTIFIERs . COMMA IDENTIFIERs

    COMMA  shift, and go to state 42
    OF     shift, and go to state 64


state 42

    7 IDENTIFIERs: IDENTIFIERs COMMA . IDENTIFIERs

    IDENTIFIER  shift, and go to state 8

    IDENTIFIERs  go to state 65


state 43

    4 declaration_block: IDENTIFIERs OF . TYPE type SEMICOLON

    TYPE  shift, and go to state 66


state 44

    9 real: MINUS INTEGER . DOT INTEGER
   53 number_constant: MINUS INTEGER .

    DOT  shift, and go to state 67

    $default  reduce using rule 53 (number_constant)


state 45

   48 value: BRA expression . KET

    KET  shift, and go to state 68


state 46

   51 character_constant: APOSTROPHE CHARACTER . APOSTROPHE

    APOSTROPHE  shift, and go to state 69


state 47

   31 conditional: NOT . conditional

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    NOT         shift, and go to state 47
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    conditional         go to state 70
    expression          go to state 49
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 48

   20 if_statement: IF conditional . THEN statement_list ENDIF
   21             | IF conditional . THEN statement_list ELSE statement_list ENDIF
   32 conditional: conditional . AND conditional
   33            | conditional . OR conditional

    THEN  shift, and go to state 71
    AND   shift, and go to state 72
    OR    shift, and go to state 73


state 49

   30 conditional: expression . comparator expression

    LESSTHAN     shift, and go to state 74
    MORETHAN     shift, and go to state 75
    LESSOREQUAL  shift, and go to state 76
    MOREOREQUAL  shift, and go to state 77
    SHEVRONS     shift, and go to state 78
    EQUALS       shift, and go to state 79

    comparator  go to state 80


state 50

   11 statement_list: statement_list . SEMICOLON statement
   22 do_statement: DO statement_list . WHILE conditional ENDDO

    SEMICOLON  shift, and go to state 56
    WHILE      shift, and go to state 81


state 51

   24 while_statement: WHILE conditional . DO statement_list ENDWHILE
   32 conditional: conditional . AND conditional
   33            | conditional . OR conditional

    DO   shift, and go to state 82
    AND  shift, and go to state 72
    OR   shift, and go to state 73


state 52

   23 for_statement: FOR IDENTIFIER . IS expression BY expression TO expression DO statement_list ENDFOR

    IS  shift, and go to state 83


state 53

   25 write_statement: WRITE BRA . output_list KET

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    output_list         go to state 84
    value               go to state 85
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 54

   29 read_statement: READ BRA . IDENTIFIER KET

    IDENTIFIER  shift, and go to state 86


state 55

    8 real: INTEGER DOT . INTEGER

    INTEGER  shift, and go to state 87


state 56

   11 statement_list: statement_list SEMICOLON . statement

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    IF          shift, and go to state 14
    DO          shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    WRITE       shift, and go to state 18
    NEWLINE     shift, and go to state 19
    READ        shift, and go to state 20
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                  go to state 23
    statement             go to state 88
    assignment_statement  go to state 26
    if_statement          go to state 27
    do_statement          go to state 28
    for_statement         go to state 29
    while_statement       go to state 30
    write_statement       go to state 31
    read_statement        go to state 32
    expression            go to state 33
    term                  go to state 34
    value                 go to state 35
    constant              go to state 36
    character_constant    go to state 37
    number_constant       go to state 38


state 57

   19 assignment_statement: expression POINTER . IDENTIFIER

    IDENTIFIER  shift, and go to state 89


state 58

   41 expression: term PLUS . expression

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    expression          go to state 90
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 59

   42 expression: term MINUS . expression

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    expression          go to state 91
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 60

   44 term: value TIMES . term

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    term                go to state 92
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 61

   45 term: value DIVIDE . term

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    term                go to state 93
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 62

    1 program: IDENTIFIER COLON block ENDPROGRAM IDENTIFIER . DOT

    DOT  shift, and go to state 94


state 63

    2 block: DECLARATIONS declaration_block CODE statement_list .
   11 statement_list: statement_list . SEMICOLON statement

    SEMICOLON  shift, and go to state 56

    $default  reduce using rule 2 (block)


state 64

    5 declaration_block: declaration_block IDENTIFIERs OF . TYPE type SEMICOLON

    TYPE  shift, and go to state 95


state 65

    7 IDENTIFIERs: IDENTIFIERs . COMMA IDENTIFIERs
    7            | IDENTIFIERs COMMA IDENTIFIERs .

    COMMA  shift, and go to state 42

    COMMA     [reduce using rule 7 (IDENTIFIERs)]
    $default  reduce using rule 7 (IDENTIFIERs)


state 66

    4 declaration_block: IDENTIFIERs OF TYPE . type SEMICOLON

    REAL           shift, and go to state 96
    CHARACTERTYPE  shift, and go to state 97
    INTEGER        shift, and go to state 98

    type  go to state 99


state 67

    9 real: MINUS INTEGER DOT . INTEGER

    INTEGER  shift, and go to state 100


state 68

   48 value: BRA expression KET .

    $default  reduce using rule 48 (value)


state 69

   51 character_constant: APOSTROPHE CHARACTER APOSTROPHE .

    $default  reduce using rule 51 (character_constant)


state 70

   31 conditional: NOT conditional .
   32            | conditional . AND conditional
   33            | conditional . OR conditional

    AND  shift, and go to state 72
    OR   shift, and go to state 73

    AND       [reduce using rule 31 (conditional)]
    OR        [reduce using rule 31 (conditional)]
    $default  reduce using rule 31 (conditional)


state 71

   20 if_statement: IF conditional THEN . statement_list ENDIF
   21             | IF conditional THEN . statement_list ELSE statement_list ENDIF

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    IF          shift, and go to state 14
    DO          shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    WRITE       shift, and go to state 18
    NEWLINE     shift, and go to state 19
    READ        shift, and go to state 20
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                  go to state 23
    statement_list        go to state 101
    statement             go to state 25
    assignment_statement  go to state 26
    if_statement          go to state 27
    do_statement          go to state 28
    for_statement         go to state 29
    while_statement       go to state 30
    write_statement       go to state 31
    read_statement        go to state 32
    expression            go to state 33
    term                  go to state 34
    value                 go to state 35
    constant              go to state 36
    character_constant    go to state 37
    number_constant       go to state 38


state 72

   32 conditional: conditional AND . conditional

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    NOT         shift, and go to state 47
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    conditional         go to state 102
    expression          go to state 49
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 73

   33 conditional: conditional OR . conditional

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    NOT         shift, and go to state 47
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    conditional         go to state 103
    expression          go to state 49
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 74

   36 comparator: LESSTHAN .

    $default  reduce using rule 36 (comparator)


state 75

   37 comparator: MORETHAN .

    $default  reduce using rule 37 (comparator)


state 76

   38 comparator: LESSOREQUAL .

    $default  reduce using rule 38 (comparator)


state 77

   39 comparator: MOREOREQUAL .

    $default  reduce using rule 39 (comparator)


state 78

   35 comparator: SHEVRONS .

    $default  reduce using rule 35 (comparator)


state 79

   34 comparator: EQUALS .

    $default  reduce using rule 34 (comparator)


state 80

   30 conditional: expression comparator . expression

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    expression          go to state 104
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 81

   22 do_statement: DO statement_list WHILE . conditional ENDDO

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    NOT         shift, and go to state 47
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    conditional         go to state 105
    expression          go to state 49
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 82

   24 while_statement: WHILE conditional DO . statement_list ENDWHILE

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    IF          shift, and go to state 14
    DO          shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    WRITE       shift, and go to state 18
    NEWLINE     shift, and go to state 19
    READ        shift, and go to state 20
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                  go to state 23
    statement_list        go to state 106
    statement             go to state 25
    assignment_statement  go to state 26
    if_statement          go to state 27
    do_statement          go to state 28
    for_statement         go to state 29
    while_statement       go to state 30
    write_statement       go to state 31
    read_statement        go to state 32
    expression            go to state 33
    term                  go to state 34
    value                 go to state 35
    constant              go to state 36
    character_constant    go to state 37
    number_constant       go to state 38


state 83

   23 for_statement: FOR IDENTIFIER IS . expression BY expression TO expression DO statement_list ENDFOR

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    expression          go to state 107
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 84

   25 write_statement: WRITE BRA output_list . KET
   28 output_list: output_list . COMMA value

    COMMA  shift, and go to state 108
    KET    shift, and go to state 109


state 85

   27 output_list: value .

    $default  reduce using rule 27 (output_list)


state 86

   29 read_statement: READ BRA IDENTIFIER . KET

    KET  shift, and go to state 110


state 87

    8 real: INTEGER DOT INTEGER .

    $default  reduce using rule 8 (real)


state 88

   11 statement_list: statement_list SEMICOLON statement .

    $default  reduce using rule 11 (statement_list)


state 89

   19 assignment_statement: expression POINTER IDENTIFIER .

    $default  reduce using rule 19 (assignment_statement)


state 90

   41 expression: term PLUS expression .

    $default  reduce using rule 41 (expression)


state 91

   42 expression: term MINUS expression .

    $default  reduce using rule 42 (expression)


state 92

   44 term: value TIMES term .

    $default  reduce using rule 44 (term)


state 93

   45 term: value DIVIDE term .

    $default  reduce using rule 45 (term)


state 94

    1 program: IDENTIFIER COLON block ENDPROGRAM IDENTIFIER DOT .

    $default  reduce using rule 1 (program)


state 95

    5 declaration_block: declaration_block IDENTIFIERs OF TYPE . type SEMICOLON

    REAL           shift, and go to state 96
    CHARACTERTYPE  shift, and go to state 97
    INTEGER        shift, and go to state 98

    type  go to state 111


state 96

   57 type: REAL .

    $default  reduce using rule 57 (type)


state 97

   55 type: CHARACTERTYPE .

    $default  reduce using rule 55 (type)


state 98

   56 type: INTEGER .

    $default  reduce using rule 56 (type)


state 99

    4 declaration_block: IDENTIFIERs OF TYPE type . SEMICOLON

    SEMICOLON  shift, and go to state 112


state 100

    9 real: MINUS INTEGER DOT INTEGER .

    $default  reduce using rule 9 (real)


state 101

   11 statement_list: statement_list . SEMICOLON statement
   20 if_statement: IF conditional THEN statement_list . ENDIF
   21             | IF conditional THEN statement_list . ELSE statement_list ENDIF

    SEMICOLON  shift, and go to state 56
    ENDIF      shift, and go to state 113
    ELSE       shift, and go to state 114


state 102

   32 conditional: conditional . AND conditional
   32            | conditional AND conditional .
   33            | conditional . OR conditional

    AND  shift, and go to state 72
    OR   shift, and go to state 73

    AND       [reduce using rule 32 (conditional)]
    OR        [reduce using rule 32 (conditional)]
    $default  reduce using rule 32 (conditional)


state 103

   32 conditional: conditional . AND conditional
   33            | conditional . OR conditional
   33            | conditional OR conditional .

    AND  shift, and go to state 72
    OR   shift, and go to state 73

    AND       [reduce using rule 33 (conditional)]
    OR        [reduce using rule 33 (conditional)]
    $default  reduce using rule 33 (conditional)


state 104

   30 conditional: expression comparator expression .

    $default  reduce using rule 30 (conditional)


state 105

   22 do_statement: DO statement_list WHILE conditional . ENDDO
   32 conditional: conditional . AND conditional
   33            | conditional . OR conditional

    ENDDO  shift, and go to state 115
    AND    shift, and go to state 72
    OR     shift, and go to state 73


state 106

   11 statement_list: statement_list . SEMICOLON statement
   24 while_statement: WHILE conditional DO statement_list . ENDWHILE

    SEMICOLON  shift, and go to state 56
    ENDWHILE   shift, and go to state 116


state 107

   23 for_statement: FOR IDENTIFIER IS expression . BY expression TO expression DO statement_list ENDFOR

    BY  shift, and go to state 117


state 108

   28 output_list: output_list COMMA . value

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    value               go to state 118
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 109

   25 write_statement: WRITE BRA output_list KET .

    $default  reduce using rule 25 (write_statement)


state 110

   29 read_statement: READ BRA IDENTIFIER KET .

    $default  reduce using rule 29 (read_statement)


state 111

    5 declaration_block: declaration_block IDENTIFIERs OF TYPE type . SEMICOLON

    SEMICOLON  shift, and go to state 119


state 112

    4 declaration_block: IDENTIFIERs OF TYPE type SEMICOLON .

    $default  reduce using rule 4 (declaration_block)


state 113

   20 if_statement: IF conditional THEN statement_list ENDIF .

    $default  reduce using rule 20 (if_statement)


state 114

   21 if_statement: IF conditional THEN statement_list ELSE . statement_list ENDIF

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    IF          shift, and go to state 14
    DO          shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    WRITE       shift, and go to state 18
    NEWLINE     shift, and go to state 19
    READ        shift, and go to state 20
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                  go to state 23
    statement_list        go to state 120
    statement             go to state 25
    assignment_statement  go to state 26
    if_statement          go to state 27
    do_statement          go to state 28
    for_statement         go to state 29
    while_statement       go to state 30
    write_statement       go to state 31
    read_statement        go to state 32
    expression            go to state 33
    term                  go to state 34
    value                 go to state 35
    constant              go to state 36
    character_constant    go to state 37
    number_constant       go to state 38


state 115

   22 do_statement: DO statement_list WHILE conditional ENDDO .

    $default  reduce using rule 22 (do_statement)


state 116

   24 while_statement: WHILE conditional DO statement_list ENDWHILE .

    $default  reduce using rule 24 (while_statement)


state 117

   23 for_statement: FOR IDENTIFIER IS expression BY . expression TO expression DO statement_list ENDFOR

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    expression          go to state 121
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 118

   28 output_list: output_list COMMA value .

    $default  reduce using rule 28 (output_list)


state 119

    5 declaration_block: declaration_block IDENTIFIERs OF TYPE type SEMICOLON .

    $default  reduce using rule 5 (declaration_block)


state 120

   11 statement_list: statement_list . SEMICOLON statement
   21 if_statement: IF conditional THEN statement_list ELSE statement_list . ENDIF

    SEMICOLON  shift, and go to state 56
    ENDIF      shift, and go to state 122


state 121

   23 for_statement: FOR IDENTIFIER IS expression BY expression . TO expression DO statement_list ENDFOR

    TO  shift, and go to state 123


state 122

   21 if_statement: IF conditional THEN statement_list ELSE statement_list ENDIF .

    $default  reduce using rule 21 (if_statement)


state 123

   23 for_statement: FOR IDENTIFIER IS expression BY expression TO . expression DO statement_list ENDFOR

    MINUS       shift, and go to state 11
    BRA         shift, and go to state 12
    APOSTROPHE  shift, and go to state 13
    INTEGER     shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    real                go to state 23
    expression          go to state 124
    term                go to state 34
    value               go to state 35
    constant            go to state 36
    character_constant  go to state 37
    number_constant     go to state 38


state 124

   23 for_statement: FOR IDENTIFIER IS expression BY expression TO expression . DO statement_list ENDFOR

    DO  shift, and go to state 125


state 125

   23 for_statement: FOR IDENTIFIER IS expression BY expression TO expression DO . statement_list ENDFOR
